# tg_bot

./: .gitignore  CMakeLists.txt  LICENSE  docker-compose.yml  install.sh  readme.md
include/: authManager.h  bot.h  database.h  handlers.h  logger.h  user.h
src/: bot.cpp  database.cpp  handlers.cpp  logger.cpp  main.cpp
